force-app/main/default/objects/Cotacoes__c/Cotacoes__c.object-meta.xml
<CustomObject>
    <description>Objeto de cotações que relaciona com usuario, corretora e conta</description>
    <label>Cotações</label>
    <nameField>
        <displayFormat>COT - {0}</displayFormat>
        <label>Cotações</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cotações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>