force-app/main/default/objects/Cotacoes__c/fields/Campo_Consultor__c.field-meta.xml
<CustomField>
    <fullName>Campo_Consultor__c</fullName>
    <displayFormat>Formulário - {0}</displayFormat>
    <label>Campo Consultor</label>
    <type>AutoNumber</type>
</CustomField>