force-app/main/default/objects/Cotacoes__c/fields/Campo_Thiago__c.field-meta.xml
<CustomField>
    <fullName>Campo_Thiago__c</fullName>
    <displayFormat>Proposta - {0}</displayFormat>
    <label>Campo Thiago</label>
    <type>AutoNumber</type>
</CustomField>