force-app/main/default/objects/Cotacoes__c/fields/Canal__c.field-meta.xml
<CustomField>
    <fullName>Canal__c</fullName>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CORRETORA</fullName>
            </value>
            <value>
                <fullName>EQUIPE CORPORATIVA</fullName>
            </value>
            <value>
                <fullName>EQUIPE PME II</fullName>
            </value>
            <value>
                <fullName>LOJAS AUTORIZADAS</fullName>
            </value>
            <value>
                <fullName>NOVOS NEGÓCIOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>