force-app/main/default/objects/Cotacoes__c/fields/Consultor__c.field-meta.xml
<CustomField>
    <fullName>Consultor__c</fullName>
    <formula>CreatedBy.FirstName &amp;&quot; &quot;&amp; CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consultor</label>
    <type>Text</type>
</CustomField>