force-app/main/default/objects/Cotacoes__c/fields/Contingente__c.field-meta.xml
<CustomField>
    <fullName>Contingente__c</fullName>
    <label>Contingente</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>