force-app/main/default/objects/Cotacoes__c/fields/DataPedidoCotacao__c.field-meta.xml
<CustomField>
    <fullName>DataPedidoCotacao__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data do Pedido de Cotação</label>
    <type>Date</type>
</CustomField>