force-app/main/default/objects/Cotacoes__c/fields/Detalhamento_da_autoriza_o__c.field-meta.xml
<CustomField>
    <fullName>Detalhamento_da_autoriza_o__c</fullName>
    <label>Aprovação Pendente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gerente GVEN</fullName>
            </value>
            <value>
                <fullName>Superintendência comercial</fullName>
            </value>
            <value>
                <fullName>GRCC</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>