force-app/main/default/objects/Cotacoes__c/fields/Id_do_usuario_logado__c.field-meta.xml
<CustomField>
    <fullName>Id_do_usuario_logado__c</fullName>
    <formula>Usu_rio__r.UserRoleId</formula>
    <label>id do papel do usuario logado</label>
    <type>Text</type>
</CustomField>