force-app/main/default/objects/Cotacoes__c/fields/NomeCorretora__c.field-meta.xml
<CustomField>
    <fullName>NomeCorretora__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nome da Corretora</label>
    <referenceTo>Corretora__c</referenceTo>
    <relationshipLabel>Cotações</relationshipLabel>
    <relationshipName>Cotacoes</relationshipName>
    <type>Lookup</type>
</CustomField>