force-app/main/default/objects/Cotacoes__c/fields/OperadoraAtual__c.field-meta.xml
<CustomField>
    <fullName>OperadoraAtual__c</fullName>
    <description>Nome da Operadora Atual</description>
    <label>Operadora Atual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>