force-app/main/default/objects/Cotacoes__c/fields/STATUS_DA_COTACAO_FORMULA__c.field-meta.xml
<CustomField>
    <fullName>STATUS_DA_COTACAO_FORMULA__c</fullName>
    <formula>TEXT( StatusCotacao__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STATUS DA COTACAO FORMULA</label>
    <type>Text</type>
</CustomField>