force-app/main/default/objects/Cotacoes__c/fields/StatusCotacao__c.field-meta.xml
<CustomField>
    <fullName>StatusCotacao__c</fullName>
    <label>Status da Cotação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SolicitadaCDC</fullName>
                <label>Solicitada ao CDC</label>
            </value>
            <value>
                <fullName>Pendente de autorização</fullName>
            </value>
            <value>
                <fullName>Aguardando informação/correção do consulto</fullName>
            </value>
            <value>
                <fullName>Proposta comercial disponível para emissão</fullName>
            </value>
            <value>
                <fullName>Solicitado revisão/alteração de proposta ao CDC</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>Convertida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>