force-app/main/default/objects/Cotacoes__c/fields/VinculoProposta__c.field-meta.xml
<CustomField>
    <fullName>VinculoProposta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vinculo Proposta</label>
    <referenceTo>DocumentosProposta__c</referenceTo>
    <relationshipLabel>Cotações</relationshipLabel>
    <relationshipName>Cotacoes</relationshipName>
    <type>Lookup</type>
</CustomField>