force-app/main/default/objects/Cotacoes__c/validationRules/COTACAO_CONVERTIDA.validationRule-meta.xml
<ValidationRule>
    <fullName>COTACAO_CONVERTIDA</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   Lead__r.STATUS_DO_LEAD_EM_TEXTO_FORMULA__c != &apos;Convertido&apos;,
   
   STATUS_DA_COTACAO_FORMULA__c = &apos;Convertida&apos;
   

)</errorConditionFormula>
    <errorMessage>SO PODE CONVERTER SE O LEAD ESTIVER CONVERTIDO</errorMessage>
</ValidationRule>