force-app/main/default/objects/Cotacoes__c/validationRules/ObrigaPendenteAutorizacao.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigaPendenteAutorizacao</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(StatusCotacao__c , &apos;Pendente de autorização&apos;) &amp;&amp; ISBLANK( TEXT(Detalhamento_da_autoriza_o__c))</errorConditionFormula>
    <errorDisplayField>Detalhamento_da_autoriza_o__c</errorDisplayField>
    <errorMessage>Campo Obrigatorio Aprovação Pendente</errorMessage>
</ValidationRule>